--- a/modulos/modulo_conjOrd.tex
+++ b/modulos/modulo_conjOrd.tex
@@ -72,7 +72,7 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\tadOperacion{minimo}{conj($\alpha$)/c}{$\alpha$}{$\neg\emptyset$?(c)}
 
 	\tadAxiomas
-	\tadAxioma{minimo(c)}{\IF $\#(c) \= 1$  THEN 
+	\tadAxioma{minimo(c)}{\IF $\#(c) = 1$ THEN 
 		dameUno(c) 
 	ELSE 
 		{\IF dameUno(c) $<$ minimo(sinUno(c)) THEN
