--- a/resolucion.tex
+++ b/resolucion.tex
@@ -54,6 +54,9 @@
 \input{modulos/modulo_diccString}
 
 \pagebreak
+\input{modulos/tuplaOrd}
+
+\pagebreak
 \input{consideraciones}
 
 \end{document}
