--- a/modulos/modulo_conjOrd.tex
+++ b/modulos/modulo_conjOrd.tex
@@ -1,6 +1,6 @@
 \section{Módulo ConjuntoOrd($\alpha$)}
 
-Este conjunto genérico se implementa sobre un arbol de búsqueda autobalanceado (AVL). Esto permite agregar, buscar y remover cualquier elemento en tiempo logarítmico. Se requiere que $\alpha$ tenga definido una relación de orden estricta.
+Este conjunto genérico se implementa sobre un arbol de búsqueda autobalanceado (AVL). Esto permite agregar, buscar y remover cualquier elemento en tiempo logarítmico. Se requiere que $\alpha$ tenga definida una relación de orden estricta.
 
 Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También usaremos la función $isLess$ para denotar costos de comparación entre elementos.
 
@@ -90,7 +90,6 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\TituloDis{Operaciones básicas del iterador}
 
 	El iterador que presentamos no permite modificar el conjunto recorrido.
-
 
 	\InterfazFuncion{CrearIt}{\In{c}{conjOrd}}{itConjOrd}
 	{true}
