--- a/modulos/modulo_colaPrior.tex
+++ b/modulos/modulo_colaPrior.tex
@@ -1,4 +1,4 @@
-\section{Modulo ColaPrioridad($\alpha$)}
+\section{Modulo ColaPrioridad(\texorpdfstring{$\alpha$}{α})}
 
 Esta cola de prioridad genérica se representa sobre un conjunto, el cual a su vez se implementa sobre un arbol de búsqueda autobalanceado (AVL). Gracias a esto, no solo podemos realizar cualquier función en tiempo logarítmico o menor, sino que también nos permite agregar la función Borrar, que nos permite eliminar cualquier elemento de la cola. Para establecer correctamente la prioridad, se requiere que $\alpha$ tenga definida una relación de orden estricta.
 
