--- a/modulos/modulo_conjOrd.tex
+++ b/modulos/modulo_conjOrd.tex
@@ -1,4 +1,4 @@
-\section{Módulo ConjuntoOrd($\alpha$)}
+\section{Módulo ConjuntoOrd(\texorpdfstring{$\alpha$}{α})}
 
 Este conjunto genérico se implementa sobre un arbol de búsqueda autobalanceado (AVL). Esto permite agregar, buscar y remover cualquier elemento en tiempo logarítmico. Se requiere que $\alpha$ tenga definida una relación de orden estricta.
 
