--- a/modulos/modulo_conjOrd.tex
+++ b/modulos/modulo_conjOrd.tex
@@ -36,13 +36,13 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\InterfazFuncion{Agregar}{\Inout{c}{conjOrd}, \In{a}{$\alpha$}}{}
 	[$c \igobs c_0$]
 	{$c \igobs$ Ag($a, c_0$)}
-	[$O(log(\#c))$]
+	[$O(log(\#c) \times isLess(\alpha_1, \alpha_2))$]
 	[agrega $a$ al conjunto.]
 	[se almacenan copias de $a$.]
 
 	\InterfazFuncion{Pertenece?}{\In{c}{conjOrd}, \In{a}{$\alpha$}}{bool}
 	{$res \igobs$ $a \in c$)]}
-	[$O(log(\#c))$]
+	[$O(log(\#c) \times isLess(\alpha_1, \alpha_2)) $]
 	[devuelve \texttt{true} si $a$ esta en el conjunto.]
 
 	\InterfazFuncion{Vacio?}{\In{c}{conjOrd}}{bool}
@@ -53,13 +53,13 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\InterfazFuncion{Borrar}{\Inout{c}{conjOrd}, \In{a}{$\alpha$}}{}
 	[$c \igobs c_0$)]
 	{$c \igobs$ borrar($a, c_0$)}
-	[$O(log(\#c))$]
+	[$O(log(\#c) \times isLess(\alpha_1, \alpha_2)) $]
 	[elimina un elemento del conjunto si el mismo existía.]
 
 	\InterfazFuncion{Minimo}{\Inout{c}{conjOrd}}{$\alpha$}
 	[$\neg$vacio?($c$)]
 	{$res \igobs$ minimo($c$)}
-	[$O(log(\#c))$]
+	[$O(log(\#c) \times isLess(\alpha_1, \alpha_2)) $]
 	[devuelve el elemento mas chico del conjunto.]
 
 	\TituloDis{Especificación de las operaciones auxiliares utilizadas en la interfaz}
@@ -322,10 +322,10 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iPertenece?}{\In{c}{eConj}, \In{a}{$\alpha$}}{bool}}
-		res $\leftarrow$ Buscar(c.raiz, a) $\neq$ NULL\OdeLinea{log(\#c)}
+		res $\leftarrow$ Buscar(c.raiz, a) $\neq$ NULL\OdeLinea{log(\#c) \times isLess(\alpha_1, \alpha_2)}
 	\end{algorithm}
 
-	\complejidad: $O(log(\#c))$
+	\complejidad: $ O(log(\#c)$ $\times$ isLess($ \alpha_1, \alpha_2 $))
 
 	\justifcomp: la complejidad de buscar un elemento es de orden de la altura del arbol, que por invariante de AVL sabemos que es $log(\#c)$
 
@@ -347,11 +347,11 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iAgregar}{\Inout{c}{eConj}, \In{a}{$\alpha$}}{}}
 		\If{not Pertenece?(c, a)}{
-			c.raiz $\leftarrow$ Insertar(a, c.raiz)\OdeLinea{log(\#c)}
+			c.raiz $\leftarrow$ Insertar(a, c.raiz)\OdeLinea{log(\#c) \times isLess(\alpha_1, \alpha_2)}
 		}
 	\end{algorithm}
 
-	\complejidad: $O(log(\#c))$
+	\complejidad: $O(log(\#c) \times isLess(\alpha_1, \alpha_2))$
 
 	\justifcomp: la complejidad de buscar un elemento es de orden de la altura del arbol, que por invariante de AVL sabemos que es $log(\#c)$
 
@@ -360,10 +360,10 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iBorrar}{\Inout{c}{eConj}, \In{a}{$\alpha$}}{}}
-		c.raiz $\leftarrow$ Remover(a, c.raiz)\OdeLinea{log(\#c)}
+		c.raiz $\leftarrow$ Remover(a, c.raiz)\OdeLinea{log(\#c) \times isLess(\alpha_1, \alpha_2)}
 	\end{algorithm}
 
-	\complejidad: $O(log(\#c))$
+	\complejidad: $O(log(\#c) \times isLess(\alpha_1, \alpha_2))$
 
 	\justifcomp: la complejidad de buscar, agregar o eliminar un elemento es de orden de la altura del arbol, que por invariante de AVL sabemos que es $log(\#c)$
 
@@ -373,13 +373,13 @@ Usaremos $\#c$ para denotar la cantidad de entradas del diccionario. También us
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iMinimo}{\Inout{c}{eConj}}{$\alpha$}}
 		puntero(Nodo): minimo $\leftarrow$ c.raiz\OdeLinea{1}
-		\While(\OdeBloque{log($\#C$)}){(*minimo).hijoIzq $\neq$ NULL}{
+		\While(\OdeBloque{log(\#c) \times isLess(\alpha_1, \alpha_2)}){(*minimo).hijoIzq $\neq$ NULL}{
 				minimo $\leftarrow$ (*minimo.)hijoIzq \OdeLinea{1}
 			}
 		res $\leftarrow$ minimo.elem
 	\end{algorithm}
 
-	\complejidad: $O(log(\#c))$
+	\complejidad: $O(log(\#c) \times isLess(\alpha_1, \alpha_2))$
 
 	\justifcomp: hay que recorrer una rama del arbol hasta llegar al extremo izquierdo, y por invariante de AVL sabemos que es $log(\#c)$
 
