--- a/modulos/tuplaOrd.tex
+++ b/modulos/tuplaOrd.tex
@@ -1,50 +1,65 @@
-\section{Módulo Tupla con Orden}
+\section{Módulo Tupla con Orden(\texorpdfstring{$\alpha$}{α}, \texorpdfstring{$\beta$}{β})}
 
-TODO
+Este módulo permite crear tuplas con orden absoluto. El orden se define por el segundo elemento de la tupla, y en caso de coincidir se utiliza el primer elemento para desempatar.
 
 \begin{Interfaz}
 
 	\textbf{parámetros formales}\hangindent=2\parindent\\
 	\parbox{1.7cm}{\textbf{géneros}}$\alpha$\\
 	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{.5\textwidth-\parindent-1.7cm}{
-		\InterfazFuncion{$\bullet < \bullet$}{\In{k_1}{$\alpha$}, \In{k_2}{$\alpha$}}{bool}
+		\InterfazFuncion{$\bullet < \bullet$}{\In{a_1}{$\alpha$}, \In{a_2}{$\alpha$}}{bool}
 		{$res \igobs (a_1 < a_2)$}
 		[$\Theta(isLess(a_1, a_2))$]
 		[comparación de $\alpha$'s]
-		% TODO: ver todas las complejidades con esto
 	}
 	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{.5\textwidth-\parindent-1.7cm}{
-		\InterfazFuncion{$\bullet < \bullet$}{\In{k_1}{$\sigma$}, \In{k_2}{$\sigma$}}{bool}
-		{$res \igobs (a_1 < a_2)$}
-		[$\Theta(isLess(a_1, a_2))$]
-		[comparación de $\sigma$'s]
-		% TODO: ver todas las complejidades con esto
+		\InterfazFuncion{$\bullet < \bullet$}{\In{b_1}{$\beta$}, \In{b_2}{$\beta$}}{bool}
+		{$res \igobs (b_1 < b_2)$}
+		[$\Theta(isLess(b_1, b_2))$]
+		[comparación de $\beta$'s]
+	}\\[2ex]
+	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{.5\textwidth-\parindent-1.7cm}{
+		\InterfazFuncion{$\bullet = \bullet$}{\In{a_1}{$\beta$}, \In{a_2}{$\beta$}}{bool}
+		{$res \igobs (b_1 = b_2)$}
+		[$\Theta(equal(b_1, b_2))$]
+		[función de igualdad de $\beta$'s]
+	}
+	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{.5\textwidth-\parindent-1.7cm}{
+		\InterfazFuncion{Copiar}{\In{a}{$\alpha$}}{$\alpha$}
+		{$res \igobs a$}
+		[$\Theta(copy(a))$]
+		[función de copia de $\alpha$'s]
+	}\\[2ex]
+	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{.5\textwidth-\parindent-1.7cm}{
+		\InterfazFuncion{Copiar}{\In{b}{$\beta$}}{$\beta$}
+		{$res \igobs b$}
+		[$\Theta(copy(b))$]
+		[función de copia de $\beta$'s]
 	}
 
-	\textbf{se explica con}: \tadNombre{tupla($\alpha$, $\sigma$)}.
+	\textbf{se explica con}: \tadNombre{tupla($\alpha$, $\beta$)}.
 
-	\textbf{géneros}: \TipoVariable{tupOrd($\alpha$, $\sigma$)}.
-
-	%%\textbf{servicios usados}: \tadNombre{Vector($\alpha$)}
+	\textbf{géneros}: \TipoVariable{tupOrd($\alpha$, $\beta$)}.
 
 	\TituloDis{Operaciones básicas de Tupla con Orden}
 
-	\InterfazFuncion{CrearTupla}{\In{a}{$\alpha$}, \In{s}{$\sigma$}}{tupOrd}
+	\InterfazFuncion{CrearTupla}{\In{a}{$\alpha$}, \In{s}{$\beta$}}{tupOrd}
 	{$res \igobs \langle a, s \rangle$}
 	[$O(1)$]
-	[crea tupla]	
+	[crea una tupla.]
+	[]	
 
 	\InterfazFuncion{$\pi_1$}{\In{t}{tupOrd}}{$\alpha$}
 	{$res \igobs \pi_1 (t)$}
 	[$O(1)$]
 	[Devuelve el primer componente de la tupla]
 
-	\InterfazFuncion{$\pi_2$}{\In{t}{tupOrd}}{$\sigma$}
+	\InterfazFuncion{$\pi_2$}{\In{t}{tupOrd}}{$\beta$}
 	{$res \igobs \pi_2 (t)$}
 	[$O(1)$]
 	[Devuelve la segunda componente de la tupla]
 
-	\InterfazFuncion{$<$}{\In{t1}{tupOrd}, \In{t2}{tupOrd}}{$\alpha$}
+	\InterfazFuncion{\puntito $<$ \puntito}{\In{t1}{tupOrd}, \In{t2}{tupOrd}}{$\alpha$}
 	{$res \igobs t1 < t2$}
 	[$O(1)$]
 	[Devuelve si la primer tupla es mejor a la segunda]
@@ -53,14 +68,31 @@ TODO
 
 	\begin{tad}{Tupla Extendida}
 	\parskip=0pt
-	\tadExtiende{\tadNombre{tupla($\alpha$, $\sigma$)}}
+	\tadExtiende{\tadNombre{tupla($\alpha$, $\beta$)}}
+
+	\textbf{parámetros formales}\hangindent=2\parindent\\
+	\parbox{1.7cm}{\textbf{géneros}}$\alpha,\beta$\\
+	\parbox{\parindent+1.7cm}{\textbf{operaciones}}\parbox[t]{\textwidth-\parindent-1.7cm}{
+		\tadOperacionInline
+		{\puntito $<$ \puntito}
+		{$\alpha$,$\alpha$}
+		{bool}\\
+		\tadOperacionInline
+		{\puntito $<$ \puntito}
+		{$\beta$,$\beta$}
+		{bool}\\
+		\tadOperacionInline
+		{\puntito $=$ \puntito}
+		{$\beta$,$\beta$}
+		{bool}
+	}
 
 	\tadTitulo{otras operaciones (exportadas)}
 
 	\tadOperacion{\argumento $<$ \argumento}{tupOrd, tupOrd}{bool}{}
 	
 	\tadAxiomas
-	\tadAxioma{a $<$ b}{ $\pi_2$(a) $<$ $\pi_2$(b) $\lor$ ($\pi_1$(a) = $\pi_1$(b) $\land$ $\pi_1$(a) $<$ $\pi_1$(b))}
+	\tadAxioma{a $<$ b}{$\pi_2$(a) $<$ $\pi_2$(b) $\lor$ ($\pi_1$(a) = $\pi_1$(b) $\land$ $\pi_1$(a) $<$ $\pi_1$(b))}
 
 
 	\end{tad}
@@ -71,16 +103,16 @@ TODO
 \begin{Representacion}
 	\TituloDis{Representación de Tupĺa con Orden}
 
-	\begin{Estructura}{tupla($\alpha$, $\sigma$)}[eT]
+	\begin{Estructura}{tupla($\alpha$, $\beta$)}[eT]
 		\begin{Tupla}[eT]
 			\tupItem{primer}{$\alpha$}
-			\tupItem{segun}{$\sigma$}
+			\tupItem{segun}{$\beta$}
 		\end{Tupla}
 	\end{Estructura}
 
 	\TituloDis{Invariante de Representación}
 
-	\Rep[eT][e]{true}
+	\RepFc[eT][e]{true}
 
 
 	\TituloDis{Función de Abstracción}
@@ -93,7 +125,7 @@ TODO
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iCrearTupla}{\In{a}{$\alpha$}, \In{s}{$\sigma$}}{eT}}
+		\caption{\algoritmo{iCrearTupla}{\In{a}{$\alpha$}, \In{s}{$\beta$}}{eT}}
 		res.primer $\leftarrow$ a\OdeLinea{1}
 		res.segun $\leftarrow$ s\OdeLinea{1}
 	\end{algorithm}
@@ -129,5 +161,8 @@ TODO
 		res $\leftarrow$ t1.segun $<$ t2.segun $\lor$ (t1.segun = t2.segun $\land$ t1.primer $<$ t2.primer)\OdeLinea{1}
 	\end{algorithm}
 
-	\complejidad: $O(1)$
+	\complejidad: $O(isLess(t1.primer, t2.primer) + isLess(t1.segun, t2.segun) + equals(t1.segun, t2.segun))$
+
+	\justifcomp: las comparaciones entre tuplas se realizan a través de sus componentes
+
 \end{Algoritmos}
