--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -237,9 +237,14 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 		\item No hay dos coordenadas pertenecientes a posConPokemons a menos de 5 de distancia
 
+		\item Solo las posiciones con pokemon tienen jugadoresEsperandoCaptura
+
 		\item Para cada una de las claves de jugsEsperandoCaptura, el jugador es un jugador válido y se encuentra en posición de captura del pokemon correspondiente
 
 		\item Para cada una de las claves de jugsEsperandoCaptura, su significado es la cantidad de pokemons
+
+		\item Los jugadores que estan esperando para capturar estan en su respectivo jugsEsperandoCaptura
+
 
 
 	\end{enumerate}
@@ -257,7 +262,8 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		diccionarioCorrecto(e) $\land$\\
 		jugadores5sanciones(e.jugadores) $\land$\\
 		pksAlejados(e.posConPokemons) $\land$\\
-		jugadoresEsperandoCaptura(e, e.posConPokemon)
+		jugadoresEsperandoCaptura(e, e.posConPokemon) $\land$\\
+		jugadoresEstanCapturando(e)
 	}
 
 	~
@@ -292,6 +298,10 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 	\tadOperacion{jugsEsperandoEnPosValido}{pokego, colaPrior(jugador, nat)}{bool}{} %TODO fijense si les parece correcto lo que hice con esto
 
+	\tadOperacion{jugadoresEstanCapturando}{pokego}{bool}{}
+
+	\tadOperacion{enCapturaValida}{pokego/p, nat/i}{bool}{i $\leq$ long(e.jugadores) $\land$ e.jugadores[i] $\rightarrow$conectado?}
+	
 	~
 
 	\tadAxioma{jugadoresConectadosEnPosValidas(e)}{
@@ -413,6 +423,20 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 	\tadAxioma{jugsEsperandoEnPosValido(e, cola)}{
 		vacía?(cola) $\oluego$ (jugsEsperandoEnPosValido(e, desencolar(cola)) $\land$ $\pi_1$(proximo(cola)) $<$ long(e.jugadores) $\land$ e.jugadores[$\pi_1$(proximo(cola))].sanciones $<$ 5 $\yluego$ distEuclidea(e.jugadores[$\pi_1$(proximo(cola))].posicion, crearCoor(i,j)) $\leq$ 4 $\land$ $\pi_2$proximo(cola) = (*e.jugadores[$\pi_1$(proximo(cola))]).cantPokemons)
 	}
+
+	~
+
+	\tadAxioma{jugadoresEstanCapturando(e)}{
+	($\forall i$: nat) ((i $\leq$ long(e.jugadores) $\land$ e.jugadores[i] $\rightarrow$conectado?) $\implies$ enCapturaValida(e, i))
+	}
+
+	\tadAxioma{enCapturaValida(e, i)}{
+		($\forall c$: coor) ((posExistente(c, e.mapa) $\land$ c $\in$ e.posConPokemons $\land$ \\
+		distEuclidea(c, e.jugadores[i]$\rightarrow$posicion) $\leq$ 4) $\implies$ \\
+		($\langle$ i, e.jugadores[i] $\rightarrow$ cantPokemons $\rangle$ $\in$ e.grillaPos[longitud(e.jugadores[i]$\rightarrow$posicion)][latitud(e.jugadores[i]$\rightarrow$posicion)].jugsEnPos))
+	}
+
+	\tadAxioma{}
 	
 	\TituloDis{Función de Abstracción}
 
